# agenda_based_mcfg_wchoi18

./: .gitignore  README.md  pyproject.toml
src/: wh_tree.txt
src/agenda_based_mcfg_wchoi18/: __init__.py  grammar.py  main.py  parser.py  tree.py
tests/: test_grammar.py  test_parser.py  test_tree.py
