[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "agenda_based_mcfg_wchoi18"
version = "0.0.3"
authors = [
  { name="Woo Jin Choi", email="wchoi18@ur.rochester.edu" },
]
description = "A package for parsing and generating sentences using MCFG (Multiple Context-Free Grammar)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/wchoi20/agenda_based_mcfg_wchoi18"